recombination fix + loc

--- a/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
@@ -2075,6 +2075,188 @@ todo_ascension:0 ""
 	tec_gene_path.40091.regular.tooltip:0 ""
 	tec_gene_path.40091.biohive:0 "Proceed - Weave the stored genetic material."
 	tec_gene_path.40091.biohive.tooltip:0 ""
+
+	# Main
+	tec_gene_path.500.name:0 "Genetic Recombination"
+	tec_gene_path.500.desc.regular:0 "We have prepared a big batch of gathered genetic data for a long-term recombination, trying to find positive elements and refining new strains usable for our species.\n\nWe just need to decide how to approach these new changes."
+	tec_gene_path.500.desc.hive:0 "$tec_gene_path.500.desc.regular$"
+	tec_gene_path.500.slow:0 "Follow a slow recombination"
+	tec_gene_path.500.slow.tooltip:0 "$tec_adopt_ascension_approach_slow_risk$"
+	tec_gene_path.500.standard:0 "Proceed with normal standards"
+	tec_gene_path.500.standard.tooltip:0 "$tec_adopt_ascension_approach_standard_risk$"
+	tec_gene_path.500.fast:0 "Accelerate the process"
+	tec_gene_path.500.fast.tooltip:0 "$tec_adopt_ascension_approach_fast_risk$"
+	# Select what we want to upgrade
+	tec_gene_path.50010.name:0 "Genetic Recombination - Approach"
+	tec_gene_path.50010.desc.regular:0 "The data we need to refine includes different positive pairs and potential uses as secondary interchangeable material, we are now in the necessity of deciding if we shall focus on using them for improving what we already have, or try to discover new uses."
+	tec_gene_path.50010.recombine.upgrade:0 "Recombine existing §Ytraits§!"
+	tec_gene_path.50010.recombine.upgrade.tooltip:0 "We will recombine a desirable trait, upgrading it."
+	tec_gene_path.50010.recombine.upgrade.nope:0 "REPLACE_ME"
+	tec_gene_path.50010.recombine.point:0 "§YExperiment§! with genetic data"
+	tec_gene_path.50010.recombine.point.tooltip:0 "We will experiment with recombined data, gaining a random, unpredictable result."
+	# Select what trait type
+	tec_gene_path.50125.name:0 "Genetic Recombination - Trait I"
+	tec_gene_path.50125.desc.regular:0 "Using the new genetic data on traits will allow us to further unlock the capacity of these positive strains, making viable upgrades for our species.\n\nThe type of strain we want to upgrade will mark what result we will obtain."
+	tec_gene_path.50125.recombine.main:0 "Recombine §YMain§! Trait"
+	tec_gene_path.50125.recombine.main.tooltip:0 "Upgrades a Main Genetic Trait.\nThe trait will be automatically upgraded on all our species when the situation ends"
+	tec_gene_path.50125.already.unlocked.all:0 "REPLACE_ME"
+	tec_gene_path.50125.already.unlocked.all.main:0 "REPLACE_ME"
+	tec_gene_path.50125.recombine.advanced:0 "Recombine §YAdvanced§! Trait"
+	tec_gene_path.50125.recombine.advanced.tooltip:0 "Upgrades an Advanced Genetic Trait.\nThe trait will be automatically upgraded on all our species when the situation ends"
+	tec_gene_path.50125.require.previous.upgrade:0 "REPLACE_ME"
+	tec_gene_path.50125.recombine.normal:0 "Recombine §YStandard§! Trait"
+	tec_gene_path.50125.recombine.normal.tooltip:0 "Upgrades a Standard Genetic Trait.\nThe trait will be automatically upgraded on all our species when the situation ends"
+	# Recombine Lotto 1
+	tec_gene_path.50925.name:0 "Genetic Recombination - Experimental I"
+	tec_gene_path.50925.desc.regular:0 "TODO ASCENSION"
+	tec_gene_path.50925.lotto.red:0 "TODO ASCENSION"
+	tec_gene_path.50925.lotto.red.tooltip:0 "TODO ASCENSION"
+	tec_gene_path.50925.lotto.green:0 "TODO ASCENSION"
+	tec_gene_path.50925.lotto.green.tooltip:0 "TODO ASCENSION"
+	tec_gene_path.50925.lotto.blue:0 "TODO ASCENSION"
+	tec_gene_path.50925.lotto.blue.tooltip:0 "TODO ASCENSION"
+	tec_gene_path.50925.lotto.yellow:0 "TODO ASCENSION"
+	tec_gene_path.50925.lotto.yellow.tooltip:0 "TODO ASCENSION"
+	# Recombine main
+	tec_gene_path.50150.name:0 "Genetic Recombination - Trait II"
+	tec_gene_path.50150.desc.regular:0 "We are now available to upgrade the main support of our genetic data, this special trait is available for a recombination. With this change we will, for sure, amplify our capacities."
+	tec_gene_path.50150.recombine.main.t2:0 "Recombination: §Y$trait_tec_gene_main_t2$§!"
+	tec_gene_path.50150.recombine.main.t2.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50150.recombine.main.t3:0 "Recombination: §Y$trait_tec_gene_main_t3$§!"
+	tec_gene_path.50150.recombine.main.t3.tooltip:0 "$todo_ascension$"
+	# Recombine advanced
+	tec_gene_path.50250.name:0 "Genetic Recombination - Trait II"
+	tec_gene_path.50250.desc.regular:0 "We have applied the genetic strains towards upgrading some of our most relevant traits - Now it is time to redirect the efforts towards a particular one."
+	tec_gene_path.50250.recombine.automodding.t2:0 "Recombination: §Y$trait_tec_gene_automodding_t2$§!"
+	tec_gene_path.50250.recombine.automodding.t2.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50250.recombine.automodding.t3:0 "Recombination: §Y$trait_tec_gene_automodding_t3$§!"
+	tec_gene_path.50250.recombine.automodding.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50250.recombine.genius.t2:0 "Recombination: §Y$trait_tec_gene_genius_t2$§!"
+	tec_gene_path.50250.recombine.genius.t2.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50250.recombine.genius.t3:0 "Recombination: §Y$trait_tec_gene_genius_t3$§!"
+	tec_gene_path.50250.recombine.genius.t3.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50250.recombine.will.t2:0 "Recombination: §Y$trait_tec_gene_will_t2$§!"
+	tec_gene_path.50250.recombine.will.t2.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50250.recombine.will.t3:0 "Recombination: §Y$trait_tec_gene_will_t3$§!"
+	tec_gene_path.50250.recombine.will.t3.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50250.recombine.fertile.t2:0 "Recombination: §Y$trait_tec_gene_fertile_t2$§!"
+	tec_gene_path.50250.recombine.fertile.t2.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50250.recombine.fertile.t3:0 "Recombination: §Y$trait_tec_gene_fertile_t3$§!"
+	tec_gene_path.50250.recombine.fertile.t3.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50250.recombine.robust.t2:0 "Recombination: §Y$trait_tec_gene_robust_t2$§!"
+	tec_gene_path.50250.recombine.robust.t2.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50250.recombine.robust.t3:0 "Recombination: §Y$trait_tec_gene_robust_t3$§!"
+	tec_gene_path.50250.recombine.robust.t3.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50250.recombine.audacious.t2:0 "Recombination: §Y$trait_tec_gene_audacious_t2$§!"
+	tec_gene_path.50250.recombine.audacious.t2.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50250.recombine.audacious.t3:0 "Recombination: §Y$trait_tec_gene_audacious_t3$§!"
+	tec_gene_path.50250.recombine.audacious.t3.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50250.recombine.lifespan.t2:0 "Recombination: §Y$trait_tec_gene_lifespan_t2$§!"
+	tec_gene_path.50250.recombine.lifespan.t2.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50250.recombine.lifespan.t3:0 "Recombination: §Y$trait_tec_gene_lifespan_t3$§!"
+	tec_gene_path.50250.recombine.lifespan.t3.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50250.recombine.metabolic.t2:0 "Recombination: §Y$trait_tec_gene_metabolic_t2$§!"
+	tec_gene_path.50250.recombine.metabolic.t2.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50250.recombine.metabolic.t3:0 "Recombination: §Y$trait_tec_gene_metabolic_t3$§!"
+	tec_gene_path.50250.recombine.metabolic.t3.tooltip:0 "$todo_ascension$"
+	# Recombine basic
+	tec_gene_path.50350.name:0 "Genetic Recombination - Trait II"
+	tec_gene_path.50350.desc.regular:0 "We have applied the genetic strains towards upgrading some of our most common traits - Now it is time to redirect the efforts towards a particular one."
+	tec_gene_path.50350.recombine.energy.t2:0 "Recombination: §Y$trait_tec_gene_energy_t2$§!"
+	tec_gene_path.50350.recombine.energy.t2.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50350.recombine.energy.t3:0 "Recombination: §Y$trait_tec_gene_energy_t3$§!"
+	tec_gene_path.50350.recombine.energy.t3.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50350.recombine.mining.t2:0 "Recombination: §Y$trait_tec_gene_mining_t2$§!"
+	tec_gene_path.50350.recombine.mining.t2.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50350.recombine.mining.t3:0 "Recombination: §Y$trait_tec_gene_mining_t3$§!"
+	tec_gene_path.50350.recombine.mining.t3.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50350.recombine.farming.t2:0 "Recombination: §Y$trait_tec_gene_farming_t2$§!"
+	tec_gene_path.50350.recombine.farming.t2.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50350.recombine.farming.t3:0 "Recombination: §Y$trait_tec_gene_farming_t3$§!"
+	tec_gene_path.50350.recombine.farming.t3.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50350.recombine.research.t2:0 "Recombination: §Y$trait_tec_gene_research_t2$§!"
+	tec_gene_path.50350.recombine.research.t2.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50350.recombine.research.t3:0 "Recombination: §Y$trait_tec_gene_research_t3$§!"
+	tec_gene_path.50350.recombine.research.t3.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50350.recombine.unity.t2:0 "Recombination: §Y$trait_tec_gene_unity_t2$§!"
+	tec_gene_path.50350.recombine.unity.t2.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50350.recombine.unity.t3:0 "Recombination: §Y$trait_tec_gene_unity_t3$§!"
+	tec_gene_path.50350.recombine.unity.t3.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50350.recombine.industry.t2:0 "Recombination: §Y$trait_tec_gene_industry_t2$§!"
+	tec_gene_path.50350.recombine.industry.t2.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50350.recombine.industry.t3:0 "Recombination: §Y$trait_tec_gene_industry_t3$§!"
+	tec_gene_path.50350.recombine.industry.t3.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50350.recombine.amenities.t2:0 "Recombination: §Y$trait_tec_gene_amenities_t2$§!"
+	tec_gene_path.50350.recombine.amenities.t2.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50350.recombine.amenities.t3:0 "Recombination: §Y$trait_tec_gene_amenities_t3$§!"
+	tec_gene_path.50350.recombine.amenities.t3.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50350.recombine.trade.t2:0 "Recombination: §Y$trait_tec_gene_trade_t2$§!"
+	tec_gene_path.50350.recombine.trade.t2.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50350.recombine.trade.t3:0 "Recombination: §Y$trait_tec_gene_trade_t3$§!"
+	tec_gene_path.50350.recombine.trade.t3.tooltip:0 "$todo_ascension$"
+	# Recombine Lotto 2
+	tec_gene_path.50950.name:0 "Genetic Recombination - Experimental II"
+	tec_gene_path.50950.desc.regular:0 "$todo_ascension$"
+	tec_gene_path.50950.lotto.unchanging:0 "$todo_ascension$"
+	tec_gene_path.50950.lotto.unchanging.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50950.lotto.stable:0 "$todo_ascension$"
+	tec_gene_path.50950.lotto.stable.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50950.lotto.unstable:0 "$todo_ascension$"
+	tec_gene_path.50950.lotto.unstable.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50950.lotto.mutative:0 "$todo_ascension$"
+	tec_gene_path.50950.lotto.mutative.tooltip:0 "$todo_ascension$"
+	# Recombine Trait Result
+	tec_gene_path.50501.name:0 "Genetic Recombination - Trait III"
+	tec_gene_path.50501.desc.regular:0 "It is done, we have applied our recombination knowledge towards a particular trait and we are now ready to distribute the upgrade amongst our population."
+	tec_gene_path.50501.recombine.main.t2:0 "A step closer to perfection"
+	tec_gene_path.50501.recombine.main.t2.tooltip:0 "All our species with the previous trait will gain automatically the upgrade."
+	tec_gene_path.50501.recombine.automodding:0 "A step closer to perfection"
+	tec_gene_path.50501.recombine.automodding.tooltip:0 "All our species with the previous trait will gain automatically the upgrade."
+	tec_gene_path.50501.recombine.genius:0 "A step closer to perfection"
+	tec_gene_path.50501.recombine.genius.tooltip:0 "All our species with the previous trait will gain automatically the upgrade."
+	tec_gene_path.50501.recombine.will:0 "A step closer to perfection"
+	tec_gene_path.50501.recombine.will.tooltip:0 "All our species with the previous trait will gain automatically the upgrade."
+	tec_gene_path.50501.recombine.fertile:0 "A step closer to perfection"
+	tec_gene_path.50501.recombine.fertile.tooltip:0 "All our species with the previous trait will gain automatically the upgrade."
+	tec_gene_path.50501.recombine.robust:0 "A step closer to perfection"
+	tec_gene_path.50501.recombine.robust.tooltip:0 "All our species with the previous trait will gain automatically the upgrade."
+	tec_gene_path.50501.recombine.audacious:0 "A step closer to perfection"
+	tec_gene_path.50501.recombine.audacious.tooltip:0 "All our species with the previous trait will gain automatically the upgrade."
+	tec_gene_path.50501.recombine.lifespan:0 "A step closer to perfection"
+	tec_gene_path.50501.recombine.lifespan.tooltip:0 "All our species with the previous trait will gain automatically the upgrade."
+	tec_gene_path.50501.recombine.metabolic:0 "A step closer to perfection"
+	tec_gene_path.50501.recombine.metabolic.tooltip:0 "All our species with the previous trait will gain automatically the upgrade."
+	tec_gene_path.50501.recombine.energy:0 "A step closer to perfection"
+	tec_gene_path.50501.recombine.energy.tooltip:0 "All our species with the previous trait will gain automatically the upgrade."
+	tec_gene_path.50501.recombine.mining:0 "A step closer to perfection"
+	tec_gene_path.50501.recombine.mining.tooltip:0 "All our species with the previous trait will gain automatically the upgrade."
+	tec_gene_path.50501.recombine.farming:0 "A step closer to perfection"
+	tec_gene_path.50501.recombine.farming.tooltip:0 "All our species with the previous trait will gain automatically the upgrade."
+	tec_gene_path.50501.recombine.research:0 "A step closer to perfection"
+	tec_gene_path.50501.recombine.research.tooltip:0 "All our species with the previous trait will gain automatically the upgrade."
+	tec_gene_path.50501.recombine.unity:0 "A step closer to perfection"
+	tec_gene_path.50501.recombine.unity.tooltip:0 "All our species with the previous trait will gain automatically the upgrade."
+	tec_gene_path.50501.recombine.industry:0 "A step closer to perfection"
+	tec_gene_path.50501.recombine.industry.tooltip:0 "All our species with the previous trait will gain automatically the upgrade."
+	tec_gene_path.50501.recombine.amenities:0 "A step closer to perfection"
+	tec_gene_path.50501.recombine.amenities.tooltip:0 "All our species with the previous trait will gain automatically the upgrade."
+	tec_gene_path.50501.recombine.trade:0 "A step closer to perfection"
+	tec_gene_path.50501.recombine.trade.tooltip:0 "All our species with the previous trait will gain automatically the upgrade."
+	# Recombine Lotto Result
+	tec_gene_path.50502.name:0 "Genetic Recombination - Experimental III"
+	tec_gene_path.50501.desc.trait.increase:0 "$todo_ascension$"
+	tec_gene_path.50501.desc.trait.increase.repeated.1:0 "$todo_ascension$"
+	tec_gene_path.50501.desc.trait.increase.repeated.2:0 "$todo_ascension$"
+	tec_gene_path.50501.desc.trait.increase.repeated.3:0 "$todo_ascension$"
+	tec_gene_path.50501.desc.trait.increase.repeated.4:0 "$todo_ascension$"
+	tec_gene_path.50501.desc.trait.increase.repeated.5:0 "$todo_ascension$"
+	tec_gene_path.50501.desc.pick.increase.1:0 "$todo_ascension$"
+	tec_gene_path.50501.desc.pick.increase.2:0 "$todo_ascension$"
+	tec_gene_path.50501.desc.pick.increase.3:0 "$todo_ascension$"
+	tec_gene_path.50501.recombine.trait.increase:0 "$todo_ascension$"
+	tec_gene_path.50501.recombine.trait.increase.tooltip:0 "$todo_ascension$"
+	tec_gene_path.50501.recombine.trait.increase.repeatable:0 "$todo_ascension$"
+	tec_gene_path.50501.recombine.trait.increase.repeatable.tooltip:0 "$todo_ascension$"
  # /
  # --------------- GENE T2 MISC EVENTS
 
