fix: habitat job counts fixes

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -4169,7 +4169,7 @@ l_english:
 
 	job_overlord_arborist_effect_desc: "£job_ranger£ $job_overlord_arborist_plural$ produce §Y$tec_loc_food$§! for the §YOverlord§! and §YVassal§!"
 	job_overlord_knight_effect_desc: "$job_overlord_knight_commandery_effect_desc$" # redirect for the job inline
-
+	job_bath_attendant_individual_machine_effect_desc: "$job_bath_attendant_machine_effect_desc$"
 
 	job_overlord_manager_drone:0 "$job_overlord_manager$ Drone"
 	job_overlord_manager_drone_plural:0 "$job_overlord_manager$ Drones"
