more ascension related things

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -673,7 +673,7 @@
 
 	trait_tec_gene_main_t3:0 "§YGenetic Perfection§! (§HIII§!)"
 	trait_tec_gene_main_t3_desc:0 "§LThis species has a perfectly tailored and maintained genetic code, which allows it to survive any circumstance, any injury or illness, as their bodies work at a incredible speed and effectivity at a cellular level, without mutations or somatic instability.§!"
-	trait_tec_gene_main_3_effect:0 "$trait_tec_gene_allows_perfected_traits$"
+	trait_tec_gene_main_t3_effect:0 "$trait_tec_gene_allows_perfected_traits$"
 
 	trait_tec_gene_main_cloning_t1:0 "TODO ASCENSION"
 	trait_tec_gene_main_cloning_t1_desc:0 "§LTODO ASCENSION§!"
@@ -690,16 +690,16 @@
  # /
  # T2 Automodding
 	trait_tec_gene_automodding_t1:0 "§YTailored Mastery§! (§GI§!)"
-	trait_tec_gene_automodding_t1_desc:0 "§LTODO ASCENSION§!"
-	trait_tec_gene_automodding_t1_effect:0 "TODO ASCENSION"
+	trait_tec_gene_automodding_t1_desc:0 "§LIngrained sets of skills manifest in this species in a dynamic way, allowing the specialization in several tasks with incredible efficiency.§!"
+	trait_tec_gene_automodding_t1_effect:0 "$automodding_trait_tooltip_all$\n\n§Y$trait_tec_gene_automodding_t1$§! picks modifiers from other unlocked gene perfection traits"
 
 	trait_tec_gene_automodding_t2:0 "§YRecombined Mastery§! (§GII§!)"
-	trait_tec_gene_automodding_t2_desc:0 "§LTODO ASCENSION§!"
-	trait_tec_gene_automodding_t2_effect:0 "TODO ASCENSION"
+	trait_tec_gene_automodding_t2_desc:0 "$trait_tec_gene_automodding_t1_desc$"
+	trait_tec_gene_automodding_t2_effect:0 "$automodding_trait_tooltip_all$\n\n§Y$trait_tec_gene_automodding_t2$§! picks modifiers from other unlocked gene perfection traits"
 
 	trait_tec_gene_automodding_t3:0 "§YPerfected Mastery§! (§GIII§!)"
-	trait_tec_gene_automodding_t3_desc:0 "§LTODO ASCENSION§!"
-	trait_tec_gene_automodding_t3_effect:0 "TODO ASCENSION"
+	trait_tec_gene_automodding_t3_desc:0 "$trait_tec_gene_automodding_t1_desc$"
+	trait_tec_gene_automodding_t3_effect:0 "$automodding_trait_tooltip_all$\n\n§Y$trait_tec_gene_automodding_t3$§! picks modifiers from other unlocked gene perfection traits"
  # /
  # T2 normal traits
 	trait_tec_gene_genius_t1:0 "§YGenius§! (§GI§!)"
@@ -737,15 +737,15 @@
 
 	trait_tec_gene_fertile_t3:0 "§YFecund§! (§HIII§!)"
 	trait_tec_gene_fertile_t3_desc:0 "§LThis species is radically altered to be naturally and artificially fertile and adapted to close social behaviors, feeling comfortable and developing close bounds being in proximity of other members of their own.§!"
-	trait_tec_gene_fertile_t3_effect:0 "$MOD_POP_HOUSING_USAGE_MULT$: §G-15%§!\n$MOD_POP_GROWTH_SPEED$: §G+30%§!\n$MOD_PLANET_POP_ASSEMBLY_ORGANIC_MULT$: §G+30%§!\n§G$trait_tec_gene_perfected_scaling$§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
+	trait_tec_gene_fertile_t3_effect:0 "$MOD_POP_HOUSING_USAGE_MULT$: §G-15%§!\n$MOD_POP_GROWTH_SPEED$: §G+25%§!\n$MOD_PLANET_POP_ASSEMBLY_ORGANIC_MULT$: §G+25%§!\n§G$trait_tec_gene_perfected_scaling$§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
 
 	trait_tec_gene_robust_t1:0 "§YImpervious§! (§GI§!)"
 	trait_tec_gene_robust_t1_desc:0 "§LNewly and additional Bio-Optimized organs aport this species with enhanced capabilities of survival, of resisting hazards and completing any possible (and near impossible) task.§!"
-	trait_tec_gene_robust_t1_effect:0 "\n§GLeaders from this species have additional traits and bonuses (£general£)§!"
+	trait_tec_gene_robust_t1_effect:0 ""
 
 	trait_tec_gene_robust_t2:0 "§YImpervious§! (§YII§!)"
 	trait_tec_gene_robust_t2_desc:0 "§LNewly and additional Bio-Optimized organs aport this species with enhanced capabilities of survival, of resisting hazards and completing any possible (and near impossible) task.§!"
-	trait_tec_gene_robust_t2_effect:0 "$todo_ascension$\n§GLeaders from this species have additional traits and bonuses (£general£)§!"
+	trait_tec_gene_robust_t2_effect:0 "$todo_ascension$\n§GLeaders from this species have additional traits and bonuses (£commander£)§!"
 
 	trait_tec_gene_robust_t3:0 "§YImpervious§! (§HIII§!)"
 	trait_tec_gene_robust_t3_desc:0 "§LNewly and additional Bio-Optimized organs aport this species with enhanced capabilities of survival, of resisting hazards and completing any possible (and near impossible) task.§!"
@@ -825,11 +825,11 @@
 	# Industry
 	trait_tec_gene_industry_t1:0 "§YTailored Manufacturing§! (§HI§!)"
 	trait_tec_gene_industry_t1_desc:0 "§LLiving amongst industrial fumes, able to breathe and recycle polluted air and widthstand any toxing and odd condition, this species thrive at industrial production and meticulous design of advanced elements.§!"
-	trait_tec_gene_industry_t1_effect:0 "Resources from £job_foundry£ Foundry Jobs: §G+12.5%§!\nResources from £job_artisan£ Artisan Jobs: §G+12.5%§!\n§G$trait_tec_gene_perfected_scaling$§!"
+	trait_tec_gene_industry_t1_effect:0 "Resources from £job_foundry£ Foundry Jobs: §G+12.5%§!\nResources from £job_artisan£ Artisan Jobs: §G+12.5%§!"
 
 	trait_tec_gene_industry_t2:0 "§YRecombined Manufacturing§! (§HII§!)"
 	trait_tec_gene_industry_t2_desc:0 "$trait_tec_gene_industry_t1_desc$"
-	trait_tec_gene_industry_t2_effect:0 "Resources from £job_foundry£ Foundry Jobs: §G+17.5%§!\nResources from £job_artisan£ Artisan Jobs: §G+17.5%§!\n§G$trait_tec_gene_perfected_scaling$§!"
+	trait_tec_gene_industry_t2_effect:0 "Resources from £job_foundry£ Foundry Jobs: §G+17.5%§!\nResources from £job_artisan£ Artisan Jobs: §G+17.5%§!"
 
 	trait_tec_gene_industry_t3:0 "§YPerfected Manufacturing§! (§HIII§!)"
 	trait_tec_gene_industry_t3_desc:0 "$trait_tec_gene_industry_t1_desc$"
@@ -1240,23 +1240,23 @@
 	# ^ TODO ASCENSION unity output
 
 	trait_tec_cyborg_cortex_neuroconductor:0 "Neuroconductor"
-	trait_tec_cyborg_cortex_neuroconductor_desc:0 "§LTODO ASCENSION.§!"
+	trait_tec_cyborg_cortex_neuroconductor_desc:0 "§LThe entire brain is encompassed by cybernetic nanocables that interconnect the neural implants of this species, allowing a better compatibility between biological and artificial function.§!"
 	trait_tec_cyborg_cortex_neuroconductor_effect:0 "§YTODO ASCENSION§!"
 	# ^ TODO ASCENSION reduce cybernetic upkeep
 
 	trait_tec_cyborg_cortex_ram:0 "Memory Boost"
-	trait_tec_cyborg_cortex_ram_desc:0 "§LTODO ASCENSION.§!"
+	trait_tec_cyborg_cortex_ram_desc:0 "§LAdditional redundant modules act as individual storage for augmentations, reducing the mental load associated with and excess of mechanical alteration.§!"
 	trait_tec_cyborg_cortex_ram_effect:0 "§YTODO ASCENSION§!"
 	# ^ TODO ASCENSION reduce cybernetic chance of issues
 
 	# Tier 2
 	trait_tec_cyborg_cortex_science:0 "Integrated Calculator"
-	trait_tec_cyborg_cortex_science_desc:0 "§LTODO ASCENSION.§!"
+	trait_tec_cyborg_cortex_science_desc:0 "§LSemi independent computers are added into the cortex cavity of this species, greatly amplifying any complex calculation, process of thought or direct thinking.§!"
 	trait_tec_cyborg_cortex_science_effect:0 "§YTODO ASCENSION§!"
 	# ^ TODO ASCENSION Increase researcher output base
 
 	trait_tec_cyborg_cortex_memory:0 "Neural Emulator"
-	trait_tec_cyborg_cortex_memory_desc:0 "§LTODO ASCENSION.§!"
+	trait_tec_cyborg_cortex_memory_desc:0 "§LA series of artificial interchange neural sub-webs co-reinforce the mind of this species, allocating thoughts at a higher speed between areas of the brain.§!"
 	trait_tec_cyborg_cortex_memory_effect:0 "§YTODO ASCENSION§!"
 	# ^ TODO ASCENSION increase bureaucrat and alike output base
 
@@ -1273,7 +1273,7 @@
  # --------------- Internal Implants
 	# Tier 1
 	trait_tec_cyborg_internal_organs:0 "Artificial Organs"
-	trait_tec_cyborg_internal_organs_desc:0 "§LTODO ASCENSION.§!"
+	trait_tec_cyborg_internal_organs_desc:0 "§LExtra cybernetic organs reinforce the organism of this species, serving as direct backup, redundance, contingency or mitigator in case of biological failure or overall day-to-day experience.§!"
 	trait_tec_cyborg_internal_organs_effect:0 "§YTODO ASCENSION§!"
 
 	trait_tec_cyborg_internal_septic:0 "Septic Implants"
@@ -1281,7 +1281,7 @@
 	trait_tec_cyborg_internal_septic_effect:0 "§YTODO ASCENSION§!"
 
 	trait_tec_cyborg_internal_intergumentary:0 "Intergumentary Augmentation"
-	trait_tec_cyborg_internal_intergumentary_desc:0 "§LTODO ASCENSION.§!"
+	trait_tec_cyborg_internal_intergumentary_desc:0 "§LNano-fibers and cybernetic webs traverse the entire bodily surface, serving as a reinforcement of the intergumentary system of this species and interface with other cybernetic traits.§!"
 	trait_tec_cyborg_internal_intergumentary_effect:0 "§YTODO ASCENSION§!"
 
 	trait_tec_cyborg_internal_retrofit:0 "Internal Retrofitters"
@@ -1289,7 +1289,7 @@
 	trait_tec_cyborg_internal_retrofit_effect:0 "§YTODO ASCENSION§!"
 
 	trait_tec_cyborg_internal_adrenaline:0 "Adrenal Boosters"
-	trait_tec_cyborg_internal_adrenaline_desc:0 "§LTODO ASCENSION.§!"
+	trait_tec_cyborg_internal_adrenaline_desc:0 "§LArtificial secretion glands pump chemicals into this cybernetic species, greatly enhancing the performance on demand.§!"
 	trait_tec_cyborg_internal_adrenaline_effect:0 "§YTODO ASCENSION§!"
 
 	trait_tec_cyborg_internal_a:0 "TODO ASCENSION"
@@ -1298,16 +1298,16 @@
 
 	# Tier 2
 	trait_tec_cyborg_internal_servos:0 "Intramuscular Micro-Servos"
-	trait_tec_cyborg_internal_servos_desc:0 "§LTODO ASCENSION.§!"
+	trait_tec_cyborg_internal_servos_desc:0 "§LRobotic motors and dynamos located in key parts of the body of this species help incredibly with mobility and development of every physical task.§!"
 	trait_tec_cyborg_internal_servos_effect:0 "§YTODO ASCENSION§!"
 
-	trait_tec_cyborg_internal_maintenance:0 "Personal Retrofitters"
-	trait_tec_cyborg_internal_maintenance_desc:0 "§LTODO ASCENSION.§!"
+	trait_tec_cyborg_internal_maintenance:0 "Personal Nanodrones"
+	trait_tec_cyborg_internal_maintenance_desc:0 "§LDeployed inside hollow tissue, capsules that serve as particular factory and storage of nanodrones help this species to keep the maximum rate of efficiency possible when it comes to self-healing, bodily repairation or augmentation tuning.§!"
 	trait_tec_cyborg_internal_maintenance_effect:0 "§YTODO ASCENSION§!"
 
 	# Bonuses for leaders, armies after death can become zomborgs
 	trait_tec_cyborg_internal_vital:0 "Autonomous Vital Support"
-	trait_tec_cyborg_internal_vital_desc:0 "§LTODO ASCENSION.§!"
+	trait_tec_cyborg_internal_vital_desc:0 "§LAn adherent monitor keeps this species alive and conscious even when it comes to overwhelming situations or even lethal damage, serving as a second consciousness reinforcing the neural-augmentation connection around all the body.§!"
 	trait_tec_cyborg_internal_vital_effect:0 "§YTODO ASCENSION§!"
 
 	trait_tec_cyborg_internal_a:0 "TODO ASCENSION"
@@ -1323,31 +1323,31 @@
 	trait_tec_cyborg_external_worker_effect:0 "§YTODO ASCENSION§!"
 
 	trait_tec_cyborg_external_weaponry:0 "Integrated Weaponry"
-	trait_tec_cyborg_external_weaponry_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_cyborg_external_weaponry_desc:0 "§LHigh-potency weaponry is allocated inside this species body, allowing a fast deployment of hostile measures when under impending attack, or as reinforcement for aggressive actions.§!"
 	trait_tec_cyborg_external_weaponry_effect:0 "§YTODO ASCENSION§!"
 
 	trait_tec_cyborg_external_aesthetic:0 "Aesthetic implants"
 	trait_tec_cyborg_external_aesthetic_desc:0 "§LBecause effectivity is not only the most important thing this species values, the degree of cosmetic and day-to-day use of prosthetics and appearance alterators is a common practice in their society.§!"
 	trait_tec_cyborg_external_aesthetic_effect:0 "§YTODO ASCENSION§!"
 
-	trait_tec_cyborg_external_skin:0 "TODO ASCENSION"
-	trait_tec_cyborg_external_skin_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_cyborg_external_skin:0 "Chromo-Mimetic Dermis"
+	trait_tec_cyborg_external_skin_desc:0 "§LA thin layer of chromo-mimetic skin serves as a new layer of defense for the body, serving as a kind of external caparace protecting from environment, hazards or any type of particle.§!"
 	trait_tec_cyborg_external_skin_effect:0 "§YTODO ASCENSION§!"
 
-	trait_tec_cyborg_external_connector:0 "TODO ASCENSION"
-	trait_tec_cyborg_external_connector_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_cyborg_external_connector:0 "Techno-Connectors"
+	trait_tec_cyborg_external_connector_desc:0 "§LExo-packs connect several cybernetic implants with central processors in a more efficient way than direct connectors, improving compatibility between implants and body.§!"
 	trait_tec_cyborg_external_connector_effect:0 "§YTODO ASCENSION§!"
 
-	trait_tec_cyborg_external_climate_dry:0 "TODO ASCENSION"
-	trait_tec_cyborg_external_climate_dry_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_cyborg_external_climate_dry:0 "Miniaturized Thermal Panels"
+	trait_tec_cyborg_external_climate_dry_desc:0 "§LMicro-panels located around the external parts of this species serve as a way to expel excess heat when augments are overloaded or environmental conditions involve an intensely warm temperature.§!"
 	trait_tec_cyborg_external_climate_dry_effect:0 "§YTODO ASCENSION§!"
 
-	trait_tec_cyborg_external_climate_wet:0 "TODO ASCENSION"
-	trait_tec_cyborg_external_climate_wet_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_cyborg_external_climate_wet:0 "Hydrolitic Protectors"
+	trait_tec_cyborg_external_climate_wet_desc:0 "§LSmall emitters serve as hydrophobic protection layer against any kind of wetness that may interfer with the correct functioning of the augmentations of this species.§!"
 	trait_tec_cyborg_external_climate_wet_effect:0 "§YTODO ASCENSION§!"
 
-	trait_tec_cyborg_external_climate_cold:0 "TODO ASCENSION"
-	trait_tec_cyborg_external_climate_cold_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_cyborg_external_climate_cold:0 "Thermoprotecting Generator"
+	trait_tec_cyborg_external_climate_cold_desc:0 "§LMicro-Generators recycle the excess heat produced by the cybernetic implants with a looping warming effect, serving as protection against low temperatures.§!"
 	trait_tec_cyborg_external_climate_cold_effect:0 "§YTODO ASCENSION§!"
 
 	# Tier 2
@@ -1356,7 +1356,7 @@
 	trait_tec_cyborg_external_specialist_effect:0 "§YTODO ASCENSION§!"
 
 	trait_tec_cyborg_external_servos:0 "Support Servos"
-	trait_tec_cyborg_external_servos_desc:0 "§LTODO ASCENSION.§!"
+	trait_tec_cyborg_external_servos_desc:0 "§LExternal harnesses directly connected to the biological body greatly improves the natural capacities of this species, and the compatibility between implants.§!"
 	trait_tec_cyborg_external_servos_effect:0 "§YTODO ASCENSION§!"
 
 	trait_tec_cyborg_external_multilimb:0 "Supplementary Extremities"
@@ -1364,7 +1364,7 @@
 	trait_tec_cyborg_external_multilimb_effect:0 "§YTODO ASCENSION§!"
 	# Extralimbs (+10% resources, -5% happiness)
 
-	trait_tec_cyborg_external_climate_multi:0 "TODO ASCENSION"
+	trait_tec_cyborg_external_climate_multi:0 "Adaptive Cyber-Shelting"
 	trait_tec_cyborg_external_climate_multi_desc:0 "§LTODO ASCENSION§!"
 	trait_tec_cyborg_external_climate_multi_effect:0 "§YTODO ASCENSION§!"
 
@@ -1372,15 +1372,15 @@
  # --------------- OS Deck Implants
 	# Vanilla rescued
 	trait_tec_cyborg_deck_loyalty:0 "Loyal-IST Deck"
-	trait_tec_cyborg_deck_loyalty_desc:0 "§LTODO ASCENSION.§!"
+	trait_tec_cyborg_deck_loyalty_desc:0 "§LThe operative system implanted on this species provide a direct connection with the empire database, serving as a reinforcement for direct propaganda and compliance with the global mottos.§!"
 	trait_tec_cyborg_deck_loyalty_effect:0 "§YTODO ASCENSION§!"
 
 	trait_tec_cyborg_deck_trading:0 "U-Trade Lite Deck"
-	trait_tec_cyborg_deck_trading_desc:0 "§LTODO ASCENSION.§!"
+	trait_tec_cyborg_deck_trading_desc:0 "§LMonitoring the stock exchanges, this implant adds an OS to this species that greatly motivates and improves the trading capacities of these species.§!"
 	trait_tec_cyborg_deck_trading_effect:0 "§YTODO ASCENSION§!"
 
-	trait_tec_cyborg_deck_joywire:0 "TODO ASCENSION"
-	trait_tec_cyborg_deck_joywire_desc:0 "§LTODO ASCENSION.§!"
+	trait_tec_cyborg_deck_joywire:0 "IJoy Wire-link"
+	trait_tec_cyborg_deck_joywire_desc:0 "§LWhy have to worry when you can just have joy? This OS implant a constant stream of pleasurable and compfy apps in the neural capacity of this species, allowing a more happy existance (even if not absolutely efficient).§!"
 	trait_tec_cyborg_deck_joywire_effect:0 "§YTODO ASCENSION§!"
 	# T2
 	trait_tec_cyborg_deck_stappled:0 "Personality Nullifier"
@@ -1394,6 +1394,34 @@
 	trait_tec_cyborg_deck_automodding:0 "Multi-OS Deck"
 	trait_tec_cyborg_deck_automodding_desc:0 "§LA coalescence of diverse skills and knowledge database is integrated in this deck Operating System module, allowing the immediate development of capacities for near any application conceivable.§!"
 	trait_tec_cyborg_deck_automodding_effect:0 "§YTODO ASCENSION§!"
+
+	trait_tec_cyborg_deck_energy:0 "Generator Database"
+	trait_tec_cyborg_deck_energy_desc:0 "§LThis Database serve as a compendium of technical skills for controlling and maintaining generators, improving energy production efficiency.§!"
+	trait_tec_cyborg_deck_energy_effect:0 "§YTODO ASCENSION§!"
+
+	trait_tec_cyborg_deck_energy:0 "Mantle-Drilling Database"
+	trait_tec_cyborg_deck_energy_desc:0 "§LA set of mining techniques and database of rich mineral deposits is implanted in this species.§!"
+	trait_tec_cyborg_deck_energy_effect:0 "§YTODO ASCENSION§!"
+
+	trait_tec_cyborg_deck_farming:0 "Farma-Crop Database"
+	trait_tec_cyborg_deck_farming_desc:0 "§LAll the required skills for increasing agro-plasticity production are ingrained in this database, fomenting better biomaterial generation.§!"
+	trait_tec_cyborg_deck_farming_effect:0 "§YTODO ASCENSION§!"
+
+	trait_tec_cyborg_deck_research:0 "Knowledge Database"
+	trait_tec_cyborg_deck_research_desc:0 "§LEvery single technological innovation is compiled in this database.§!"
+	trait_tec_cyborg_deck_research_effect:0 "§YTODO ASCENSION§!"
+
+	trait_tec_cyborg_deck_unity:0 "Development Database"
+	trait_tec_cyborg_deck_unity_desc:0 "§LTheoretical and practical applications for social development are compressed within this database ; even remote possibilities are considered.§!"
+	trait_tec_cyborg_deck_unity_effect:0 "§YTODO ASCENSION§!"
+
+	trait_tec_cyborg_deck_industrial:0 "Fabrication Database"
+	trait_tec_cyborg_deck_industrial_desc:0 "§LThis repository provide the mechanical knowledge necessary for better operation of industrial production.§!"
+	trait_tec_cyborg_deck_industrial_effect:0 "§YTODO ASCENSION§!"
+
+	trait_tec_cyborg_deck_amenities:0 "Fabrication Database"
+	trait_tec_cyborg_deck_amenities_desc:0 "§LThis repository provide the mechanical knowledge necessary for better operation of industrial production.§!"
+	trait_tec_cyborg_deck_amenities_effect:0 "§YTODO ASCENSION§!"
 # /
 
 # ------------------------------------------------- BIONICS
