--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -495,7 +495,7 @@ tec_cui_ai_power: "$tec_loc_sr_tec_ai_power$: [FROM.tec_ai_power_income]"
 tec_cui_ai_power_effect: "§H$sr_tec_ai_power$§!\n$RESOURCES_STORED$§Y[FROM.tec_ai_power_stockpile]§!\n$RESOURCES_GAINED$[FROM.tec_ai_power_income]\n$PRODUCED$§G+[FROM.tec_ai_power_revenue]§!\n$CONSUMED$§R-[FROM.tec_ai_power_expenses]§!\n$tec_loc_desc_separator$\n$sr_tec_ai_power_desc$"
 
 tec_cui_aiuth_fragment_commander: "£commander£"
-tec_cui_aiuth_fragment_general: "£general£"
+tec_cui_aiuth_fragment_general: "£commander£"
 tec_cui_aiuth_fragment_official: "£official£"
 tec_cui_aiuth_fragment_scientist: "£scientist£"
 
