fix: caching bugs and scavanger loc

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -2271,7 +2271,7 @@ l_english:
 	job_tec_scavenger_effect_desc_dry:0 "£job_tec_scavenger£ $job_tec_scavenger_plural$ consume a small amount of §Y$tec_loc_consumer_goods$§! to find rich §Y$tec_loc_energy$§! deposits and packets of §Y$tec_loc_volatile_motes$§! around."
 	job_tec_scavenger_effect_desc_wet:0 "£job_tec_scavenger£ $job_tec_scavenger_plural$ consume a small amount of §Y$tec_loc_consumer_goods$§! to find rich §Y$tec_loc_food$§! deposits and packets of §Y$tec_loc_exotic_gases$§! around."
 	job_tec_scavenger_effect_desc_cold:0 "£job_tec_scavenger£ $job_tec_scavenger_plural$ consume a small amount of §Y$tec_loc_consumer_goods$§! to find rich §Y$tec_loc_minerals$§! deposits and packets of §Y$tec_loc_rare_crystals$§! around."
-	job_tec_scavenger_effect_desc_relic:0 "£job_tec_scavenger£ $job_tec_scavenger_plural$ consume a small amount of §Y$tec_loc_consumer_goods$§! to scavenge back §Y$tec_loc_minerals$§! and §Y$tec_loc_minor_artifacts$§! from the planet ruins."
+	job_tec_scavenger_effect_desc_relic:0 "£job_tec_scavenger£ $job_tec_scavenger_plural$ consume a small amount of §Y$tec_loc_consumer_goods$§! to scavenge back §Y$tec_loc_minerals$§!, §Y$tec_loc_volatile_motes$§! and §Y$tec_loc_minor_artifacts$§! from the planet ruins."
 	job_tec_scavenger_effect_desc_artificial:0 "£job_tec_scavenger£ $job_tec_scavenger_plural$ consume a small amount of §Y$tec_loc_consumer_goods$§! to scavenge back usable §Y$tec_loc_alloys$§! and §Y$tec_loc_energy$§!."
 	job_tec_scavenger_effect_desc_artificial_ruins:0 "£job_tec_scavenger£ $job_tec_scavenger_plural$ consume a small amount of §Y$tec_loc_consumer_goods$§! to scavenge back usable §Y$tec_loc_alloys$§! and §Y$tec_loc_minor_artifacts$§! from the installation ruins."
 
