--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -275,11 +275,11 @@
 	concept_tec_leader_buildings_icon: "£leader£ Leader Buildings"
 	concept_tec_leader_building_desc: "Leader Buildings are §Y£building£ Buildings§! that increase §Y$MOD_COUNTRY_LEADER_CAP_ADD$§! Jobs and provides £pop_cat_ruler£ Ruler Jobs (or equivalent for Gestalts).\n\n$concept_tec_leader_building$ ($tec_loc_leader_scientist$):\n$t$- ['building:building_institute']\n$t$- ['building:building_supercomputer']\n$t$- ['building:building_tec_biohive_supercomputer']\n$concept_tec_leader_building$ ($tec_loc_leader_official$):\n$t$- ['building:building_autocurating_vault']\n$t$- ['building:building_citadel_of_faith']\n$t$- ['building:building_corporate_vault']\n$t$- ['building:building_tec_hive_unity_vault']\n$t$- ['building:building_tec_cyberhive_unity_vault']\n$t$- ['building:building_tec_biohive_unity_vault']\n$t$- ['building:building_alpha_hub']\n$concept_tec_leader_building$ ($tec_loc_leader_commander$):\n$t$- ['building:building_military_academy']\n$t$- ['building:building_tec_gestalt_military_academy']\n$t$- ['building:building_tec_biohive_military_academy']"
 	
-	concept_tec_unity_building: "Unity Building"
-	concept_tec_unity_building_icon: "£unity£ Unity Building"
-	concept_tec_unity_buildings: "Unity Buildings"
-	concept_tec_unity_buildings_icon: "£unity£ Unity Buildings"
-	concept_tec_unity_building_desc: "Unity Buildings are §Y£building£ Buildings§! that give §Y$tec_loc_unity$§! Jobs such as ['concept_tec_specialist_job_bureaucrat_plural_icon'], ['concept_tec_specialist_job_coordinator_plural_icon'] or ['concept_tec_specialist_job_tec_resonance_drone_plural_icon'].\n\n$concept_tec_unity_building$ ($job_bureaucrat_with_icon$):\n$t$- ['building:building_bureaucratic_1']\n$t$- ['building:building_tec_aiauth_1']\n$concept_tec_unity_building$ (£job_tec_resonance_drone£ $job_tec_resonance_drone$):\n$t$- ['building:building_hive_node']\n$t$- ['building:building_tec_cyberhive_node']\n$t$- ['building:building_tec_biohive_node']\n$concept_tec_unity_building$ (£job_evaluator£ $job_evaluator$):\n$t$- ['building:building_uplink_node']\n$t$- ['building:building_organic_sanctuary']"
+	concept_tec_unity_building: "Administrative Building"
+	concept_tec_unity_building_icon: "£unity£ Administrative Building"
+	concept_tec_unity_buildings: "Administrative Buildings"
+	concept_tec_unity_buildings_icon: "£unity£ Administrative Buildings"
+	concept_tec_unity_building_desc: "Administrative Buildings are §Y£building£ Buildings§! that give §Y$tec_loc_unity$§! Jobs such as ['concept_tec_specialist_job_bureaucrat_plural_icon'], ['concept_tec_specialist_job_coordinator_plural_icon'] or ['concept_tec_specialist_job_tec_resonance_drone_plural_icon'].\n\n$concept_tec_unity_building$ ($job_bureaucrat_with_icon$):\n$t$- ['building:building_bureaucratic_1']\n$t$- ['building:building_tec_aiauth_1']\n$concept_tec_unity_building$ (£job_tec_resonance_drone£ $job_tec_resonance_drone$):\n$t$- ['building:building_hive_node']\n$t$- ['building:building_tec_cyberhive_node']\n$t$- ['building:building_tec_biohive_node']\n$concept_tec_unity_building$ (£job_evaluator£ $job_evaluator$):\n$t$- ['building:building_uplink_node']\n$t$- ['building:building_organic_sanctuary']"
 
 	concept_tec_temple_building: "Temple Building"
 	concept_tec_temple_building_icon: "£job_priest£ Temple Building"
@@ -1047,19 +1047,21 @@
 	concept_tec_specialist_job_tec_geneticist_drone_plural_icon: "£job_tec_geneticist£ $job_tec_geneticist_drone_plural$"
 	concept_tec_specialist_job_tec_geneticist_drone_desc: "§L$job_tec_geneticist_drone_desc$§!\n\n$job_tec_geneticist_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_specialist$§!\n$tec_loc_c_produces$:\n\n"
 
+	concept_tec_specialist_job_tec_pleasure_giver_desc_common: "$tec_loc_happiness$: §G+2.5%§!\nIf non-specialized Capital Designation:\n$t$$mod_planet_jobs_upkeep_mult$: §G-2.5%§!\nIf Rural Designation:\n$t$$pop_cat_worker$ Pop $tec_loc_jobs$ Output: §G+5%§!\nIf Research Designation:\n$t$£job_researcher£ $job_researcher$ Upkeep: §G-2.5%§!\nIf Unity Designation:\n$t$£job_bureaucrat£ $job_bureaucrat$ Upkeep: §G-2.5%§!\nIf Industrial Designation:\n$t$£alloys£ £consumer_goods£ Industrial Job Upkeep: §G-2.5%§!\nIf Foundry Designation:\n$t$£job_foundry£ $job_foundry$ Upkeep: §G-5%§!\nIf Factory Designation:\n$t$£job_artisan£ $job_artisan$ Upkeep: §G-5%§!\nIf Refinery Designation:\n$t$£trigger_tec_rare_resources£ Refiner Job Upkeep: §G-2.5%§!"
+
 	concept_tec_specialist_job_tec_pleasure_giver: "$job_tec_pleasure_giver$"
 	concept_tec_specialist_job_tec_pleasure_giver_alias: "$job_tec_pleasure_giver$"
 	concept_tec_specialist_job_tec_pleasure_giver_icon: "£job_tec_pleasure_giver£ $job_tec_pleasure_giver$"
 	concept_tec_specialist_job_tec_pleasure_giver_plural: "$job_tec_pleasure_giver_plural$"
 	concept_tec_specialist_job_tec_pleasure_giver_plural_icon: "£job_tec_pleasure_giver£ $job_tec_pleasure_giver_plural$"
-	concept_tec_specialist_job_tec_pleasure_giver_desc: "§L$job_tec_pleasure_giver_desc$§!\n\n$job_tec_pleasure_giver_effect_desc_standard$\n\n$tec_loc_c_stratum$: §Y$pop_cat_specialist$§!\n$tec_loc_c_produces$:\n\n"
+	concept_tec_specialist_job_tec_pleasure_giver_desc: "§L$job_tec_pleasure_giver_desc$§!\n\n$job_tec_pleasure_giver_effect_desc_standard$\n\n$tec_loc_c_stratum$: §Y$pop_cat_specialist$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_entertainers_alias']\n\n$tec_loc_amenities$: §R-2§!\n$concept_tec_specialist_job_tec_pleasure_giver_desc_common$\nIf Trade Designation:\n$t$$tec_loc_trade_value$: §G+2§!\n$tec_loc_c_produces$: §Y£unity£ 6§!"
 
 	concept_tec_specialist_job_tec_pleasure_giver_corporate: "$job_tec_pleasure_giver$"
 	concept_tec_specialist_job_tec_pleasure_giver_corporate_alias: "$job_tec_pleasure_giver$"
 	concept_tec_specialist_job_tec_pleasure_giver_corporate_icon: "£job_tec_pleasure_giver£ $job_tec_pleasure_giver$"
 	concept_tec_specialist_job_tec_pleasure_giver_corporate_plural: "$job_tec_pleasure_giver_plural$"
 	concept_tec_specialist_job_tec_pleasure_giver_corporate_plural_icon: "£job_tec_pleasure_giver£ $job_tec_pleasure_giver_plural$"
-	concept_tec_specialist_job_tec_pleasure_giver_corporate_desc: "§L$job_tec_pleasure_giver_desc$§!\n\n$job_tec_pleasure_giver_effect_desc_corporate$\n\n$tec_loc_c_stratum$: §Y$pop_cat_specialist$§!\n$tec_loc_c_produces$:\n\n"
+	concept_tec_specialist_job_tec_pleasure_giver_corporate_desc: "§L$job_tec_pleasure_giver_desc$§!\n\n$job_tec_pleasure_giver_effect_desc_standard$\n\n$tec_loc_c_stratum$: §Y$pop_cat_specialist$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_entertainers_alias']\n\n$tec_loc_trade_value$: §R-2§!\n$concept_tec_specialist_job_tec_pleasure_giver_desc_common$\nIf Trade Designation:\n$t$$tec_loc_amenities$: §G+2§!\n$tec_loc_c_produces$: §Y£unity£ 6§!"
 
 	concept_tec_specialist_job_tec_netrunner_enforcer: "$job_tec_netrunner_enforcer$"
 	concept_tec_specialist_job_tec_netrunner_enforcer_alias: "$job_tec_netrunner_enforcer$"
@@ -1205,7 +1207,7 @@
 	concept_tec_worker_job_tec_necromonger_icon: "£job_tec_necromonger£ $job_tec_necromonger$"
 	concept_tec_worker_job_tec_necromonger_plural: "$job_tec_necromonger_plural$"
 	concept_tec_worker_job_tec_necromonger_plural_icon: "£job_tec_necromonger£ $job_tec_necromonger_plural$"
-	concept_tec_worker_job_tec_necromonger_desc: "§L$job_tec_necromonger_desc$§!\n\n$job_tec_necromonger_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_worker$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_soldiers_alias']\n\n$tec_loc_naval_cap$: §G+4§!\n$tec_loc_defense_armies$: §G+4§!\n$tec_loc_c_upkeep$: §Y£consumer_goods£ 2§!"
+	concept_tec_worker_job_tec_necromonger_desc: "§L$job_tec_necromonger_desc$§!\n\n$job_tec_necromonger_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_worker$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_soldiers_alias']\n\n$tec_loc_naval_cap$: §G+4§!\n$tec_loc_defense_armies$: §G+4§!\n$tec_loc_c_produces$: §Y£unity£ 2§!\n$tec_loc_c_upkeep$: §Y£consumer_goods£ 2§!"
 
 	concept_tec_worker_job_mortal_initiate: "$job_mortal_initiate$"
 	concept_tec_worker_job_mortal_initiate_alias: "$job_mortal_initiate$"
